# facebapp

./: Dockerfile  docker_create.sh  docker_run.sh  readme.md
facebapp/: .clang-format  CMakeLists.txt  run.sh
facebapp/cmake/linux/: CMakeLists.txt
facebapp/facial-landmarks-35-adas-0002/FP16/: facial-landmarks-35-adas-0002.xml
facebapp/facial-landmarks-35-adas-0002/FP16-INT8/: facial-landmarks-35-adas-0002.xml
facebapp/facial-landmarks-35-adas-0002/FP32/: facial-landmarks-35-adas-0002.xml
facebapp/src/: main.cpp
